<resources>
    <string name="app_name">Jobber</string>
    <string name="enter_registration">Войти или зарегистрироваться</string>
    <string name="slogan">Экономь время,\nнаходи работу у\nнас!</string>
    <string name="slogan_2">Быстрая связь между работодателями\nи соискателями.</string>
    <string name="enter_guest">Войти как гость</string>
    <string name="enter_email">Войти через почту</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="enter">Войти</string>
    <string name="name">Имя</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="talk_about_yourself">Расскажите о себе!</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="choose_gender">Выберите пол</string>
    <string name="choose_birthday">Выберите дату рождения</string>
    <string name="day">День</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="last_step">Остался последний штрих</string>
    <string name="next">Вперед</string>
    <string name="home">Главная</string>
    <string name="create">Создать</string>
    <string name="messages">Чат</string>
    <string name="map">Карта</string>
    <string name="profile">Профиль</string>
    <string name="fix">Исправить</string>

    //home
    <string name="hello">Привет,</string>
    <string name="welcome">Работа рядом \nс тобой</string>
    <string name="job">Работа</string>
    <string name="categories">Категории</string>
    <string name="current">Актуальное</string>
    <string name="description">Описание</string>
    <string name="currency">₽</string>
    <string name="respond">Откликнуться</string>

    //profile
    <string name="worker">Соискатель</string>
    <string name="employer">Работодатель</string>
    <string name="done">История</string>
    <string name="reviews">Отзывы</string>

    //Create
    <string name="work_details">Детали объявления</string>
    <string name="title">Название</string>
    <string name="category">Категория</string>
    <string name="type">Тип</string>
    <string name="prise">Вознаграждение</string>
    <string name="address">Адрес</string>
    <string name="publish">Опубликовать</string>
    <string-array name="type">
        <item>₽/зп</item>
        <item>₽/зп</item>
        <item>₽/зп</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="dash">/</string>
</resources>