<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.create.CreateFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                style="@style/CustomHeadingsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/work_details"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cPreview"
                style="@style/CustomСurrentWork"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/card_image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/PhotoCreate" />

                <TextView
                    android:id="@+id/tvTitlePreview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="название"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/card_image"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvTitle"
                style="@style/CustomHeadingsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/title"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cPreview" />

            <TextView
                android:id="@+id/tvType"
                style="@style/CustomHeadingsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/type"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etTitle" />

            <TextView
                android:id="@+id/tvCategory"
                style="@style/CustomHeadingsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/category"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etAddress" />

            <TextView
                android:id="@+id/tvDescription"
                style="@style/CustomHeadingsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/description"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etCategory" />

            <TextView
                android:id="@+id/tvAddress"
                style="@style/CustomHeadingsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/address"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etType" />

            <TextView
                android:id="@+id/tvPrice"
                style="@style/CustomHeadingsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/prise"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/etPrice"
                app:layout_constraintTop_toBottomOf="@+id/etTitle" />

            <EditText
                android:id="@+id/etAddress"
                style="@style/CustomСurrentWork"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/cPreview"
                app:layout_constraintStart_toStartOf="@+id/cPreview"
                app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

            <EditText
                android:id="@+id/etDescription"
                style="@style/CustomСurrentWork"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/cPreview"
                app:layout_constraintStart_toStartOf="@+id/cPreview"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

            <EditText
                android:id="@+id/etTitle"
                style="@style/CustomСurrentWork"
                android:layout_width="371dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/cPreview"
                app:layout_constraintStart_toStartOf="@+id/cPreview"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <FrameLayout
                android:id="@+id/etType"
                style="@style/CustomСurrentWork"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toStartOf="@+id/etPrice"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvType">

                <Spinner
                    android:id="@+id/srType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/type"
                    android:popupBackground="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/etCategory"
                style="@style/CustomСurrentWork"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCategory">

                <Spinner
                    android:id="@+id/srCategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/type"
                    android:popupBackground="@color/white" />
            </FrameLayout>

            <EditText
                android:id="@+id/etPrice"
                style="@style/CustomСurrentWork"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/etType"
                app:layout_constraintTop_toTopOf="@+id/etType" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEnter"
                style="@style/CustomActiveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/publish"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>