<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.start.birthdayFragment.BirthdayFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoBack"
            style="@style/CustomGoBackButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvGenderItem"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/not_selected_item_start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvBirthdayItem"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/selected_item_start"
                app:layout_constraintBottom_toBottomOf="@+id/tvGenderItem"
                app:layout_constraintStart_toEndOf="@+id/tvGenderItem"
                app:layout_constraintTop_toTopOf="@+id/tvGenderItem" />

            <TextView
                android:id="@+id/tvFinishItem"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/not_selected_item_start"
                android:enabled="false"
                app:layout_constraintBottom_toBottomOf="@+id/tvBirthdayItem"
                app:layout_constraintStart_toEndOf="@+id/tvBirthdayItem"
                app:layout_constraintTop_toTopOf="@+id/tvBirthdayItem" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvTalkAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/talk_about_yourself"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout" />

    <TextView
        android:id="@+id/tvTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/choose_birthday"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTalkAbout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTask">

        <TextView
            android:id="@+id/tvDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/etDay"
            app:layout_constraintStart_toStartOf="@+id/etDay"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etDay"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:autofillHints="creditCardExpirationDay"
            android:inputType="number"
            android:textAlignment="center"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/etMonth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDay"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tvMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/etMonth"
            app:layout_constraintStart_toStartOf="@+id/etMonth"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etMonth"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:autofillHints="creditCardExpirationMonth"
            android:inputType="number"
            android:textAlignment="center"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMonth"
            tools:ignore="LabelFor" />


        <TextView
            android:id="@+id/tvYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/etYear"
            app:layout_constraintStart_toStartOf="@+id/etYear"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etYear"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:autofillHints="creditCardExpirationYear"
            android:inputType="number"
            android:textAlignment="center"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etMonth"
            app:layout_constraintTop_toBottomOf="@+id/tvYear"
            tools:ignore="LabelFor" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        style="@style/CustomActiveButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>